# timesplicedb

./: .gitignore  COPYING  Makefile  Makefile.am  NGR.c  NGR.h  NGR.pm  NGR_store.c  README  build.sh  configure.ac  insert_year.pl  ngr.c  ngr_agg.c  ngr_create.c  ngr_dump.c  ngr_info.c  ngr_insert.c
doc/: TODO  columns  quickstart
extras/collectd/: collectd_timesplice.c
extras/snmp-poller/: poller.pl
html/: index.html  layout.css  timesplice.plot.js
include/: Makefile.am  NGR.h  TSDB.h
man/: .gitignore  Makefile.am  TSDB_aggregate.3.pod  TSDB_cell.3.pod  TSDB_create.3.pod  TSDB_create_opts.3.pod  TSDB_free_opts.3.pod  TSDB_insert.3.pod  TSDB_last_row_idx.3.pod  TSDB_open.3.pod  TSDB_range.3.pod  TSDB_timespan.3.pod  tsdb.1.pod
perl/NGR/: MANIFEST  Makefile.PL  NGR.xs  README  ppport.h
perl/NGR/lib/: NGR.pm
perl/NGR/lib/NGR/: C.pm
perl/NGR/t/: NGR.t  agg.t  basic.t  column.t  oo.t
perl/TSDB/: .gitignore  Changes  MANIFEST  Makefile.PL  README  TSDB.xs  typemap
perl/TSDB/example/: generate_chart  template.html
perl/TSDB/fallback/: const-c.inc  const-xs.inc
perl/TSDB/lib/: TSDB.pm
perl/TSDB/lib/TSDB/: C.pm
perl/TSDB/t/: 64bit.t  NGR.t  TSDB.t  agg.t  basic.t  column.t  oo.t
perl/concept/: NGR.pl
src/: Makefile  Makefile.am  NGR_store.c  TSDB_store.c  ngr.c  ngr_agg.c  ngr_bench.c  ngr_create.c  ngr_dump.c  ngr_info.c  ngr_insert.c  tsdb.c
src/collectd/: Makefile.am  collectd_ngr.c  collectd_timesplice.c
src/commands/: Makefile.am  agg.c  bench.c  create.c  dump.c  info.c  insert.c
